<resources>
    <string name="app_name">AndroidToolBox</string>
    <string name="title_activity_login">Connexion</string>
    <string name="prompt_username">Identifiant</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="start_text">START APP</string>
    <string name="action_login">VALIDER</string>
    <string name="logoisen">logoisen</string>
    <string name="prompt_failed_login">Mauvais identifiant ou mot de passe</string>
    <string name="welcome">BONJOUR</string>
    <string name="age">Vous avez %1$s ans</string>
    <string name="menu_cycle">Cycle de vie</string>
    <string name="menu_save">Sauvegarde</string>
    <string name="menu_webservices">Webservices</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remember">Se souvenir de moi</string>
    <string name="logout">Se déconnecter</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="title_save">Formulaire</string>
    <string name="birthday">Date de naissance</string>
    <string name="save">Sauvegarder</string>
    <string name="display_text_button">Afficher</string>
    <string name="title_permissions">Accés aux données du téléphone</string>
    <string name="task_cancel">Annulé</string>
    <string name="item_contact_name">NOM</string>
    <string name="item_contact_tel">06.00.00.00.00</string>
    <string name="item_ramdom_user_email">email</string>
    <string name="item_random_user_adress">Adress</string>


    <string name="permissions_title">Accès aux informations Android</string>
    <string name="permissions_coords">Latitude : %1$f\nLongitude : %2$f</string>
    <string name="permission_denied">Vous n\'avez pas la permission</string>
    <string name="permissions_gps_disabled">GPS désactivé</string>
    <string name="permissions_gps_enabled">GPS Activé</string>
    <string name="menu_permissions">Permissions</string>
    <string name="deco">déconnexion</string>

    <string name="nom">Nom.</string>
    <string name="pr_nom">Prénom</string>
    <string name="date">Date</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="lecture">lecture</string>
    <string name="date_picker">../../....</string>
    <string name="acc_s_aux_informations_android">Accès aux informations Android</string>
    <string name="contact">Contact :  </string>
    <string name="buton_camera">buton_camera</string>
    <string name="liste_contact">TextView</string>
    <string name="contact_name">TextView</string>
    <string name="profil_pic">TODO</string>

    <string name="user_address"></string>
    <string name="user_mail"></string>
    <string name="type_1_pokemon">type_1</string>
    <string name="type_2_pokemon">type_2</string>
    <string name="poids">Poids :</string>
    <string name="taux_d_appartition">Taux d\'appartition :</string>
    <string name="taille">Taille :</string>
    <string name="type">Type :</string>
    <string name="id">Id :</string>

    <string name="scan">LANCER LE BLE</string>
    <string name="bleTextFailed">ble a échoué </string>
    <string name="lancer_le_scan_ble">COMMENCER LE SCAN BLE </string>
    <string name="bluetooth_button" />
    <string name="ble_non_compatible">BLE NON COMPATIBLE </string>
    <string name="_10_00">00:00</string>

    <string name="_00">000</string>
    <string name="red">red</string>
    <string name="acc">Accès générique</string>
    <string name="en_attente_de_connexion">En attente de connexion</string>
    <string name="_lecture">LECTURE</string>
    <string name="ecrire">ECRIRE</string>
    <string name="notifier">NOTIFIER</string>
    <string name="entrez_une_valeur">Entrez une valeur</string>

</resources>
