<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/welcome"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cycleImg"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView"
        app:srcCompat="@drawable/ic_message_black_24dp"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/webImg"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/ic_webservives" />

    <ImageView
        android:id="@+id/permImg"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/ic_permissions" />

    <ImageView
        android:id="@+id/saveImg"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView"
        app:srcCompat="@drawable/ic_save" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_cycle"
        app:layout_constraintEnd_toEndOf="@+id/cycleImg"
        app:layout_constraintStart_toStartOf="@+id/cycleImg"
        app:layout_constraintTop_toBottomOf="@+id/cycleImg" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_save"
        app:layout_constraintEnd_toEndOf="@+id/saveImg"
        app:layout_constraintStart_toStartOf="@+id/saveImg"
        app:layout_constraintTop_toBottomOf="@+id/saveImg" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_permissions"
        app:layout_constraintEnd_toEndOf="@+id/permImg"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="@+id/permImg"
        app:layout_constraintTop_toBottomOf="@+id/permImg" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_webservices"
        app:layout_constraintEnd_toEndOf="@+id/webImg"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/webImg"
        app:layout_constraintTop_toBottomOf="@+id/webImg" />

</androidx.constraintlayout.widget.ConstraintLayout>